--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             , '复制券'
             , '原谅券'
             , '洗白白券'
-            , '情Q内衣券'
+            , '情趣内衣券'
             , '停止冷战券'
             , '免干家务券'
             , '复制券'
