--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>扭蛋机</title>
+<title>夏琪是小笨蛋</title>
 <style>
    .c-lucky {
 	background-image: url(background.png);
