--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>夏琪是小笨蛋</title>
+<title>摇摇乐</title>
 <style>
    .c-lucky {
 	background-image: url(background.png);
@@ -89,7 +89,7 @@
 <div class="c-lucky">
 	<div class="luckyName">
 		<div class="name1" id="el1"></div>
-		<div class="name2" id="el2"></div>
+		<div class="name2" id="el2">夏琪是小笨蛋</div>
 		<div class="name3"></div>
 	</div>
 
