--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>摇摇乐</title>
 <style>
    .c-lucky {
-	background-image: url(background.png);
+	background-image: url(xiaqi.jpg);
 	background-size: 650px;
 	height: 700px;
 	width: 700px;
@@ -89,7 +89,7 @@
 <div class="c-lucky">
 	<div class="luckyName">
 		<div class="name1" id="el1"></div>
-		<div class="name2" id="el2">夏琪是小笨蛋</div>
+		<div class="name2" id="el2"></div>
 		<div class="name3"></div>
 	</div>
 
