--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>摇摇乐</title>
 <style>
    .c-lucky {
-	background-image: url(xiaqi.jpg);
+	background-image: url(background.png);
 	background-size: 650px;
 	height: 700px;
 	width: 700px;
@@ -75,6 +75,8 @@
 
 .c-lucky .name2 {
 	white-space:nowrap;
+	background:url(xiaqi.jpg);
+	background-size:36%;
 }
 
 .c-lucky .name3 {
