--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 	<input class="actionBtn" type="button" id="action">
 	<input class="stopBtn" type="button" value="开始" id="stop">
 </div>
+<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
  <script>
         var oBtn = document.getElementsByClassName('stopBtn')[0];
         var oResult = document.getElementsByClassName('name2')[0];
@@ -226,7 +227,7 @@
 					var httpRequest = new XMLHttpRequest();//第一步：创建需要的对象
 					var date=new Date();
 					var strdate=date.getUTCFullYear()+"-"+(date.getMonth()+1)+"-"+date.getDate()+" "+date.getHours()+":"+date.getMinutes()+":"+date.getSeconds()+"."+date.getMilliseconds();
-					var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/"+strdate+"\n本次抽奖结果：\n"+oDiv.innerHTML;
+					var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/"+strdate+"\n本次抽奖结果：\n"+oDiv.innerHTML+"\n本次抽奖IP地址：\n"+returnCitySN["cip"];
 					//var url1 = "https://api.day.app/bmyG8yiThCnU94faphg7BD/"+strdate+"\n本次抽奖结果：\n"+oDiv.innerHTML;
 					httpRequest.withCredentials=true;
 					httpRequest.open('POST', url, true); //第二步：打开连接
