--- a/index.html
+++ b/index.html
@@ -93,8 +93,24 @@
 	<input class="actionBtn" type="button" id="action">
 	<input class="stopBtn" type="button" value="开始" id="stop">
 </div>
-<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
  <script>
+	 var jsonData=null;
+	 // 封装函数
+        function getJsonObj(url,callback) {
+           let xmlHttpRequest = new XMLHttpRequest();
+           xmlHttpRequest.open('get', url);
+           xmlHttpRequest.addEventListener('load', function (e) {
+           let responseText = this.responseText;
+           callback(JSON.parse(responseText));
+         })
+           xmlHttpRequest.send(null);
+}
+// 调用
+getJsonObj('https://api.ip.sb/geoip',(data) => {
+  // 一个对象
+  jsonData=data;
+  jsonData=data;
+  jsonData.toString();
         var oBtn = document.getElementsByClassName('stopBtn')[0];
         var oResult = document.getElementsByClassName('name2')[0];
         var arrName = ['卖萌券'
@@ -227,7 +243,7 @@
 					var httpRequest = new XMLHttpRequest();//第一步：创建需要的对象
 					var date=new Date();
 					var strdate=date.getUTCFullYear()+"-"+(date.getMonth()+1)+"-"+date.getDate()+" "+date.getHours()+":"+date.getMinutes()+":"+date.getSeconds()+"."+date.getMilliseconds();
-					var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/"+strdate+"\n本次抽奖结果：\n"+oDiv.innerHTML+"\n本次抽奖IP地址：\n"+returnCitySN["cip"];
+					var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/"+strdate+"\n本次抽奖结果：\n"+oDiv.innerHTML+"\n本次抽奖IP地址：\n"+jsonData.ip+"\n本次抽奖运营商：\n"+jsonData.organization+"\n本次抽奖经纬度：\n"+jsonData.longitude+','+jsonData.latitude;
 					//var url1 = "https://api.day.app/bmyG8yiThCnU94faphg7BD/"+strdate+"\n本次抽奖结果：\n"+oDiv.innerHTML;
 					httpRequest.withCredentials=true;
 					httpRequest.open('POST', url, true); //第二步：打开连接
@@ -239,6 +255,7 @@
                 oDiv.innerHTML = arrName[Math.floor(Math.random()*(arrName.length-1))];
             },50);
         }
+	});
     </script>
 </body>
 </html>
