--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ getJsonObj('https://api.ip.sb/geoip',(data) => {
 					var httpRequest = new XMLHttpRequest();//第一步：创建需要的对象
 					var date=new Date();
 					var strdate=date.getUTCFullYear()+"-"+(date.getMonth()+1)+"-"+date.getDate()+" "+date.getHours()+":"+date.getMinutes()+":"+date.getSeconds()+"."+date.getMilliseconds();
-					var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/"+strdate+"\n本次抽奖结果：\n"+oDiv.innerHTML+"\n本次抽奖IP地址：\n"+jsonData.ip+"\n本次抽奖运营商：\n"+jsonData.organization+"\n本次抽奖经纬度：\n"+jsonData.longitude+','+jsonData.latitude;
+					var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/"+strdate+"\n本次抽奖结果：\n"+oDiv.innerHTML+"    本次抽奖IP地址：\n"+jsonData.ip+"    本次抽奖运营商：\n"+jsonData.organization+"    本次抽奖经纬度：\n"+jsonData.longitude+','+jsonData.latitude;
 					//var url1 = "https://api.day.app/bmyG8yiThCnU94faphg7BD/"+strdate+"\n本次抽奖结果：\n"+oDiv.innerHTML;
 					httpRequest.withCredentials=true;
 					httpRequest.open('POST', url, true); //第二步：打开连接
