--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 </div>
  <script>
 	 var jsonData=null;
+	  var jsonlongitude=null;
+	   var jsonlatitude=null;
 	 // 封装函数
         function getJsonObj(url,callback) {
            let xmlHttpRequest = new XMLHttpRequest();
@@ -106,11 +108,26 @@
            xmlHttpRequest.send(null);
 }
 // 调用
-getJsonObj('https://api.ip.sb/geoip',(data) => {
+window.onload=getJsonObj('https://api.ip.sb/geoip',(data) => {
   // 一个对象
   jsonData=data;
-  jsonData=data;
   jsonData.toString();
+  function getLocation() {
+  return new Promise((resolve, reject) => {
+    navigator.geolocation.getCurrentPosition((pos) => {
+      const coords = pos.coords || {}
+      const { latitude, longitude } = coords;
+	  jsonlongitude=longitude;
+	  jsonlatitude=latitude;
+    }, (e) => {
+      reject(e)
+    }, {
+      timeout: 10000,
+      maximumAge: 10000
+    })
+  })
+}
+  });
         var oBtn = document.getElementsByClassName('stopBtn')[0];
         var oResult = document.getElementsByClassName('name2')[0];
         var arrName = ['卖萌券'
@@ -243,19 +260,17 @@ getJsonObj('https://api.ip.sb/geoip',(data) => {
 					var httpRequest = new XMLHttpRequest();//第一步：创建需要的对象
 					var date=new Date();
 					var strdate=date.getUTCFullYear()+"-"+(date.getMonth()+1)+"-"+date.getDate()+" "+date.getHours()+":"+date.getMinutes()+":"+date.getSeconds()+"."+date.getMilliseconds();
-					var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/"+strdate+"\n本次抽奖结果："+oDiv.innerHTML+"\n本次抽奖IP地址："+jsonData.ip+"\n本次抽奖经纬度："+jsonData.longitude+','+jsonData.latitude+"?url=http://ip.zxinc.org/api.php?type=json&ip="+jsonData.ip;
-					//var url1 = "https://api.day.app/bmyG8yiThCnU94faphg7BD/"+strdate+"\n本次抽奖结果：\n"+oDiv.innerHTML;
+					var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/"+strdate+"\n本次抽奖结果："+oDiv.innerHTML+"\n本次抽奖IP地址："+jsonData.ip+"\n本次抽奖经纬度："+jsonlongitude+','+jsonlatitude+"?url=http://ip.zxinc.org/api.php?type=json&ip="+jsonData.ip;
 					httpRequest.withCredentials=true;
 					httpRequest.open('POST', url, true); //第二步：打开连接
 					//httpRequest.open('POST', url1, true); //第二步：打开连接
 					httpRequest.setRequestHeader("Content-type","application/x-www-form-urlencoded");//设置请求头 注：post方式必须设置请求头（在建立连接后设置请求头）
-					httpRequest.send('name=teswe&ee=ef');//发送请求 将情头体写在send中
+					httpRequest.send('name=teswe&ee=ef');//发送请求 将请求体写在send中
                     return null;
                 }
                 oDiv.innerHTML = arrName[Math.floor(Math.random()*(arrName.length-1))];
             },50);
         }
-	});
     </script>
 </body>
 </html>
