--- a/index.html
+++ b/index.html
@@ -107,12 +107,7 @@
          })
            xmlHttpRequest.send(null);
 }
-// 调用
-window.onload=getJsonObj('https://api.ip.sb/geoip',(data) => {
-  // 一个对象
-  jsonData=data;
-  jsonData.toString();
-  function getLocation() {
+window.onload= function getLocation() {
   return new Promise((resolve, reject) => {
     navigator.geolocation.getCurrentPosition((pos) => {
       const coords = pos.coords || {}
@@ -127,6 +122,11 @@ window.onload=getJsonObj('https://api.ip.sb/geoip',(data) => {
     })
   })
 }
+// 调用
+window.onload=getJsonObj('https://api.ip.sb/geoip',(data) => {
+  // 一个对象
+  jsonData=data;
+  jsonData.toString();
   });
         var oBtn = document.getElementsByClassName('stopBtn')[0];
         var oResult = document.getElementsByClassName('name2')[0];
