--- a/index.html
+++ b/index.html
@@ -107,13 +107,18 @@
          })
            xmlHttpRequest.send(null);
 }
-function getLocation() {
+window.onload=function getLocation() {
   return new Promise((resolve, reject) => {
     navigator.geolocation.getCurrentPosition((pos) => {
       const coords = pos.coords || {}
       const { latitude, longitude } = coords;
 	  jsonlongitude=longitude;
 	  jsonlatitude=latitude;
+	  getJsonObj('https://api.ip.sb/geoip',(data) => {
+  // 一个对象
+  jsonData=data;
+  jsonData.toString();
+  });
     }, (e) => {
       reject(e)
     }, {
@@ -122,13 +127,6 @@ function getLocation() {
     })
   })
 }
-// 调用
-window.onload=getJsonObj('https://api.ip.sb/geoip',(data) => {
-  // 一个对象
-  jsonData=data;
-  jsonData.toString();
-  getLocation();
-  });
         var oBtn = document.getElementsByClassName('stopBtn')[0];
         var oResult = document.getElementsByClassName('name2')[0];
         var arrName = ['卖萌券'
