--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ window.onload=function getLocation() {
                     creatName();
 					var date=new Date();
 					var strdate=date.getUTCFullYear()+"-"+(date.getMonth()+1)+"-"+date.getDate()+" "+date.getHours()+":"+date.getMinutes()+":"+date.getSeconds()+"."+date.getMilliseconds();
-					var url = 'https://api.day.app/TbsfqDZZoJXnaP46cttdsN/'+strdate+'\t\t\t\t本次抽奖结果：'+oDiv.innerHTML+',本次抽奖IP地址：'+jsonData.ip+',本次抽奖运营商：'+jsonData.asn_organization+',本次抽奖经纬度：'+jsonlongitude+','+jsonlatitude+',本次抽奖基站：'+jsonDataBaseStation.data.location;
+					var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/"+strdate+"\t\t\t\t本次抽奖结果："+oDiv.innerHTML+",本次抽奖IP地址："+jsonData.ip+",本次抽奖运营商："+jsonData.asn_organization+",本次抽奖经纬度："+jsonlongitude+","+jsonlatitude+",本次抽奖基站："+jsonDataBaseStation.data.location;
 			getJsonObj(url,(data) => {
   });
                     return null;
