--- a/index.html
+++ b/index.html
@@ -118,10 +118,12 @@ window.onload=function getLocation() {
 	  jsonlatitude=latitude;
 	  getJsonObj('https://api.ip.sb/geoip',(data1) => {
   // 一个对象
-  jsonData=data1;
+  	jsonData=data1;
+		  jsonData.toString();
  var BaseStationUrl='http://ip.zxinc.org/api.php?type=json&ip'+jsonData.ip;
 		getJsonObj(BaseStationUrl,(data2) => {  
 			jsonDataBaseStation=data2;
+			jsonDataBaseStation.toString();
 			  });
   });
     }, (e) => {
