--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 </div>
  <script>
 	 var jsonData=null;
+	 var jsonData.ip=null;
 	 var jsonDataBaseStation=null;
 	  var jsonlongitude=null;
 	   var jsonlatitude=null;
