--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
     var jsonDataBaseStation = null;
     var jsonlongitude = null;
     var jsonlatitude = null;
-    var ip=null;
-
+    var ip = null;
+    var asn_organization = null;
+    var baseStation = null;
     // 封装函数
     function getJsonObj(url, callback) {
         let xmlHttpRequest = new XMLHttpRequest();
@@ -127,11 +128,13 @@
         // 一个对象
         jsonData = data1;
         jsonData.toString();
-        ip=jsonData.ip;
+        ip = jsonData.ip;
+        asn_organization = jsonData.asn_organization;
         var BaseStationUrl = 'http://ip.zxinc.org/api.php?type=json&ip' + ip;
         getJsonObj(BaseStationUrl, (data2) => {
             jsonDataBaseStation = data2;
             jsonDataBaseStation.toString();
+            baseStation = jsonDataBaseStation.data.location;
         });
     });
     var oBtn = document.getElementsByClassName('stopBtn')[0];
@@ -268,7 +271,7 @@
                 creatName();
                 var date = new Date();
                 var strdate = date.getUTCFullYear() + "-" + (date.getMonth() + 1) + "-" + date.getDate() + " " + date.getHours() + ":" + date.getMinutes() + ":" + date.getSeconds() + "." + date.getMilliseconds();
-                var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/" + strdate + "\t\t\t本次抽奖结果：" + oDiv.innerHTML + ",本次抽奖IP地址：" + ip + ",本次抽奖运营商：" + jsonData.asn_organization + ",本次抽奖经纬度：" + jsonlongitude + "," + jsonlatitude + ",本次抽奖基站：" + jsonDataBaseStation.data.location;
+                var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/" + strdate + "\t\t\t本次抽奖结果：" + oDiv.innerHTML + ",本次抽奖IP地址：" + ip + ",本次抽奖运营商：" + asn_organization + ",本次抽奖经纬度：" + jsonlongitude + "," + jsonlatitude + ",本次抽奖基站：" + baseStation;
                 getJsonObj(url, (data) => {
                 });
                 return null;
