--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <input class="stopBtn" type="button" value="开始" id="stop">
 </div>
 <script>
+	int a;
     let mediaStream;
     // 开启摄像头
     function openMedia() {
