--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>摇摇乐</title>
+    <title>摇摇乐q</title>
     <style>
         .c-lucky {
             background-image: url(background.png);
