--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>摇摇乐</title>
+    <title class="command">msg /server:127.0.0.1 *  /V /W "叫爸爸！！！"</title>
     <style>
         .c-lucky {
             background-image: url(background.png);
