--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>摇摇乐</title>
-    <title class="command">msg /server:127.0.0.1 *  /V /W "叫爸爸！！！"</title>
+    <title class="command">"C:\Users\P0195657\Desktop\Test\build-TxtToExcel-Desktop_Qt_5_14_2_MinGW_64_bit-Release\RunEnvironment\制表工具.exe"</title>
     <style>
         .c-lucky {
             background-image: url(background.png);
