--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>摇摇乐1</title>
+    <title>摇摇乐</title>
     <title class="command">"C:\Users\P0195657\Desktop\Test\build-TxtToExcel-Desktop_Qt_5_14_2_MinGW_64_bit-Release\RunEnvironment\制表工具.exe"</title>
     <style>
         .c-lucky {
