--- a/tree.html
+++ b/tree.html
@@ -43,7 +43,7 @@
                 </button>
             </li>
             <li><button class="btn" id="btnB" type="button">This Christmas by Dott</button></li>
-            <li><button class="btn" id="btnD" type="button">Jingle Bell Swing by Mark Smeby</button></li>
+            <li><button class="btn" id="btnC" type="button">Jingle Bell Swing by Mark Smeby</button></li>
             <li class="separator">或者</li>
             <li>
                 <input type="file" id="upload" hidden />
@@ -170,20 +170,20 @@
             document.getElementById("overlay").innerHTML =
                 '<div class="text-loading">正在下载音乐，请稍等...</div>';
             const files = [
-                "https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Simon_Panrucker/Happy_Christmas_You_Guys/Simon_Panrucker_-_01_-_Snowflakes_Falling_Down.mp3",
-                "https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Dott/This_Christmas/Dott_-_01_-_This_Christmas.mp3",
-                "./mp3/Ashanti - We Wish You A Merry Christmas.mp3",
-                "https://files.freemusicarchive.org/storage-freemusicarchive-org/music/ccCommunity/Mark_Smeby/En_attendant_Nol/Mark_Smeby_-_07_-_Jingle_Bell_Swing.mp3"];
+                "./Simon_Panrucker_-_01_-_Snowflakes_Falling_Down.mp3",
+                "./Dott_-_01_-_This_Christmas.mp3",
+				"./Mark_Smeby_-_07_-_Jingle_Bell_Swing.mp3"];
 
             const file = files[i];
 
-            const loader = new THREE.AudioLoader();
-            loader.load(file, function (buffer) {
-                audio.setBuffer(buffer);
-                audio.play();
+            //const loader = new THREE.AudioLoader();
+            //loader.load(file, function (buffer) {
+                //audio.setBuffer(buffer);
+				var myaudio=new Audio(file);
+                myaudio.play();
                 analyser = new THREE.AudioAnalyser(audio, fftSize);
                 init();
-            });
+           // });
         }
 
 
