--- a/tree.html
+++ b/tree.html
@@ -524,7 +524,7 @@
 
             //脱离文档流显示文字元素
             const floatText = document.createElement('h2');
-            floatText.innerHTML = 'Merry Christmas to 区花儿~ ';
+            floatText.innerHTML = '🎄圣诞快乐🎄';
             floatText.classList.add('animate__animated');   //动画默认加
             floatText.classList.add('animate__fadeInDown'); //动画效果
             floatText.classList.add('animate__delay-2s'); //动画延迟时间
