--- a/butterfly.html
+++ b/butterfly.html
@@ -7,7 +7,7 @@
   
 <meta charset="UTF-8">
   
-<title>CSS3+SVG 3D Flight of Butterflies</title>
+<title>蝴蝶</title>
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
