--- a/pinyin/index.html
+++ b/pinyin/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>拼音练习</title>
+<title>汉字听写</title>
 <style>
       html, body {
         margin: 0;
