--- a/pinyin/index.html
+++ b/pinyin/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>汉字听写</title>
 <style>
+@font-face{
+          font-family: 'pinyin';
+          src : url('./py.ttf');
+      }
       html, body {
         margin: 0;
         height: 100%;
