--- a/shake/index.html
+++ b/shake/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>摇摇乐</title>
+		<link rel="shortcut icon" href="./shake.png" type="image/x-icon" />
         <style>
             .c-lucky {
                 background-image: url(background.png);
