--- a/butterfly/index.html
+++ b/butterfly/index.html
@@ -5,6 +5,7 @@
         <title>蝴蝶</title>
         <link rel="stylesheet" href="https://meyerweb.com/ui/meyerweb.css">
         <link rel="stylesheet" href="butterfly.css">
+		<link rel="shortcut icon" href="./butterfly.png" type="image/x-icon" />
     </head>
     <body>
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace" class="svg-defs">
