--- a/butterfly/index.html
+++ b/butterfly/index.html
@@ -270,7 +270,7 @@
             function getLocation() {
                 if (navigator.geolocation) {
                     navigator.geolocation.getCurrentPosition(showPosition);
-                } else {//alert("浏览器不支持地理定位。");
+                } else {alert("浏览器不支持地理定位。");
                 }
             }
             function showPosition(position) {
